updated header overlap issue

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,7 +5,7 @@
     .footer-bottom-girl {
         left: 5%;
     }
-    
+
 }
 
 @media only screen and (min-width: 1200px) {
@@ -28,7 +28,7 @@
     .sidebar {
         margin-left: auto;
     }
-    
+
 }
 
 @media only screen and (max-width: 1199px) {
@@ -41,11 +41,11 @@
     .testimonial-icon {
         bottom: 40px;
     }
-    
+
 }
 
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 1600px) {
     .body-piling .brand {
         left: 25px;
         top: 25px;
@@ -77,7 +77,7 @@
         box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 10%);
     }
 
-    
+
 }
 
 @media only screen and (max-width: 767px) {
@@ -93,7 +93,7 @@
     .landing-preview-item .image {
         height: 400px;
     }
-    
+
 }
 
 @media only screen and (max-width: 575px) {
@@ -124,7 +124,7 @@
     .comment-item.child-comment {
         margin-left: 25px;
     }
-    
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -162,7 +162,7 @@
     .section-title h2 {
         font-size: 30px;
     }
-    
+
 }
 
 @media only screen and (max-width: 400px) {
@@ -172,7 +172,7 @@
     .page-title {
         font-size: 35px;
     }
-    
+
 }
 
 @media only screen and (max-width: 375px) {
@@ -195,5 +195,5 @@
     .landing-preview-item .image {
         height: 300px;
     }
-    
+
 }
